[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asmdiff"
version = "1.0.0"
description = "A tool for comparing the output of 'objdump' for before/after pairs of .o files."
authors = ["Dmitry Mikushin <dmitry@kernelgen.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.6"
readme = "README.md"

[project.dependencies]
demangler = "*"

[project.urls]
Homepage = "https://github.com/dmikushin/asmdiff"

[project.scripts]
asmdiff = "asmdiff:main"
